# VisualThink-VLA

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: visualthink_adapter.yaml
scripts/: audit_faithfulness.py  batch_extract_visual_evidence.py  benchmark_visualevidence_audit.py  build_metrics_summary.py  build_visualevidence_set.py  evaluate_libero_closed_loop.py  evaluate_offline.py  evaluate_online_lazy.py  extract_visual_evidence.py  govern_visualevidence_set.py  plot_success_latency_tradeoff.py  serve_action_api.py  summarize_channel_screening.py  train_evidence_router.py  train_visualthink_adapter.py
visualthink_vla/models/: evidence_router.py  soft_evidence_adapter.py
visualthink_vla/pipeline/: visual_evidence.py
visualthink_vla/utils/: __init__.py  evidence_visualization.py  motion_features.py  qwen_image_edit.py  relation_features.py
